[project]
name = "ishotabot"
version = "0.1.0"
description = "ishotabot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.0",
    "apscheduler>=3.11.2",
    "asyncio>=4.0.0",
    "atproto>=0.0.65",
    "beautifulsoup4>=4.14.3",
    "bilibili-api-python>=17.4.1",
    "cashews>=7.4.4",
    "coloredlogs>=15.0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lofter-py",
    "lottie>=0.7.2",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pyrogram",
    "pyrotgcrypto>=1.2.7",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv.sources]
pyrogram = { git = "https://github.com/TeamPGM/pyrogram" }
lofter-py = { git = "https://github.com/Xtao-Labs/lofter.py" }
